--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -90,7 +90,7 @@ jobs:
         with:
           cache-from: ${{ env.GHCR_REGISTRY_IMAGE }}:latest
           pull: true
-          file: Dockerfile
+          file: docker/Dockerfile
           tags: ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}
           push: true
           build-args: |
